--- a/website/exercises.qmd
+++ b/website/exercises.qmd
@@ -2,5 +2,12 @@
 title: "Exercises"
 ---
 
+This page contains several exercises based on the analyses shown in lecture.
+Some involve repeating the analy
+
+examining the sensitivity of the analyses to certain decisions (e.g., choice of underlying predictive model) while others extend the analyses to other sports or contexts or seek to quantify 
+
+
+
 Contains additional exercises to reproduce and extend analyses shown in lecture.
 
