--- a/website/index.qmd
+++ b/website/index.qmd
@@ -8,95 +8,42 @@ This iteration of the course will focus on sports analytics.
 All course material including lecture slides, code to reproduce the analyses discussed in lecture, and information about the projects will be posted on this website.
 So, please bookmark this page and check it regularly throughout the course.
 
-A PDF copy of the course syllabus is available [here](syllabus/stat479_f25_syllabus.pdf).
-Below, you will find [more details about the course](index.qmd#sec-course-info) and important [information about setting up R](index.qmd#sec-R-setup).
+A PDF copy of the course syllabus is available [here](syllabus/stat479_f25_syllabus.pdf) and an HTML version of the syllabus is available [here](syllabus.qmd)
+Below, you will find [more details about course logistics](index.qmd#sec-course-logistics) and important [information about setting up R](index.qmd#sec-R-setup).
 
-## Course Information{#sec-course-info}
-
-### Description {#sec-course-description}
-Illustrates the use of statistical modeling and data science techniques to derive actionable insights from sports data. Emphasizes not only technical calculation of advanced metrics but also on written and oral communication to other data scientists and to non-technical audience. Topics may include: deriving team rankings from paired competitions; measuring an individual player's contribution to their team's overall success; assessing player performance and team strategy in terms of expected outcomes; forecasting the impact of new rule changes using simulation; and creating new metrics using high-resolution player tracking data.
-
-### Learning Outcomes {#sec-learning-outcomes}
-Throughout the course you will
-
-  1. Implement appropriate statistical methods to assess player and team performance
-  2. Work with play-by-play and high-resolution tracking data
-  3. Provide constructive and actionable feedback on your peers' analytic reports
-  4. Build a personal portfolio of sports data analyses
-
-### Requisites {#sec-course-requisites}
-
-This course will make **extensive** use of the [R programming language](https://www.r-project.org) through the [RStudio](https://posit.co/download/rstudio-desktop/) integrated development environment (IDE). 
-Because the formal pre-requisites for this course are STAT 333 or 340, you are expected to have previous experience using the R programming language.
-
-:::{.callout-important}
-## Warning
-If you do not meet the formal course prerequisites and/or have not used R in a previous course, this is **not** the right course for you. 
-Exceptions will not made to the formal course requisites.
-:::
-
-I will assume *fluency* with basic R functionality (e.g., assignment, writing and
-executing scripts, saving data objects, setting environments, installing and loading packages), data manipulation with **dplyr** and other **tidyverse** packages, and visualization using either base R graphics or **ggplot2**. 
-I will additionally assume some familiarity with fitting statistical models in R and interpreting their output (e.g., using `lm` and `glm`).
-[Here](lectures/lecture00.qmd) is an example of the type of R coding with which I will assume you are familiar.
-If you need a refresher on some of the data wrangling in that document, I **strongly** recommend reviewing your old course notes as well as
-
-  * [Chapter 3](https://r4ds.hadley.nz/data-transform.html) and [Chapter 5](https://r4ds.hadley.nz/data-tidy.html) of [*R for Data Science*](https://r4ds.hadley.nz).
-  * [Section 1.9](https://datasciencebook.ca/intro.html#adding-and-modifying-columns-using-mutate) and [Chapter 3](https://datasciencebook.ca/wrangling.html) of [*Data Science: A First Introduction*](https://datasciencebook.ca). 
-
+## Course Logistics {#sec-course-logistics}
 
 ### Lectures {#sec-course-lectures}
 
 Lectures will be held in-person Tuesdays and Thursdays from 11:00am to 12:15pm in Morgridge Hall 1524. 
 Slides and code for each lecture will be posted on this website.
 Lectures will not be recorded.
-You are not permitted to record the lectures either. 
+You are not permitted to record the lectures either.
 
 ### Course Staff & Office Hours {#sec-course-staff}
 
-**Instructor**: [Sameer Deshpande](https://skdeshpande91.github.io) (sameer.deshpande@wisc.edu). Instructor office hours will take place at:
+**Instructor**: [Sameer Deshpande](https://skdeshpande91.github.io) (sameer.deshpande@wisc.edu). Instructor office hours will take place on:
 
   * Mondays from 11:00am to 12:00pm in Morgridge Hall 5586 (beginning 9/8/25).
   * Wednesdays from 4:00pm to 5:00pm in Morgridge Hall 5586 (beginning 9/3/25)
   * Fridays from 3:00pm to 4:30pm in Morgridge Hall 3610 (beginning 9/5/25)
 
 Office hours on Mondays and Wednesdays are designed for one-on-one meetings with the instructor.
-While the main purpose of Monday and Wednesday office hours is to discuss your specific experience and learning in the course, feel free to stop by to discuss your educational and career goals and/or any personal sports analytic projects you might be pursuing.
-
+While the main purpose of Monday and Wednesday office hours is to discuss your specific experience and learning in the course, feel free to stop by to chat about your educational and career goals and/or any personal sports analytic projects you might be pursuing.
 
 Friday office hours are intended for collaborative and small group work.
-During Friday office hours, small groups can work through or extend the analyses from lectures together with the instructor. 
+During Friday office hours, small groups can step through analyses from lecture, work on the exercises, and on their team projects with the instructor and other students. 
 Friday office hours are also a great way to brainstorm project ideas with and to get feedback from other teams. 
 
 If you have specific questions about the course content (e.g., parsing a particular bit of syntax or understanding a step in an analysis), I encourage you to ask the question on Piazza and to attend Friday office hours. 
 If you cannot make the Monday or Wednesday office hours, please email me and suggest some times at which you are free. 
 
-<!--The Monday and Wednesday office hours are designed for one-on-one or small group meetings with the instructor.
-For instance, if you have specific, personal concerns about the course, try to come during Monday and Wednesday office hours or make an appointment with the instructor.
-
-Friday office hours are designed for collaborative work: they can be an opportunity for project groups to work together and for small groups of students to re-run or extend analyses from lectures and to learn from one another. 
--->
-
-**Teaching Assistant**: Zhexuan Liu (zhexuan.liu2@wisc.edu). TA office hours will be held 9:15am - 10:45am on Tuesday and Thursdays in Morgridge Hall 5683.
+**Teaching Assistant**: Zhexuan Liu (zhexuan.liu2@wisc.edu). TA office hours will be held 9:15am - 10:45am on Tuesday and Thursdays in Morgridge Hall 2515.
 TA office hours will begin on 9/16/25. 
-
-
-### Canvas & Piazza {#sec-course-sites}
-
-We will use Canvas for course announcement, assignment submission, and grading. The Canvas course page is accessible via [this link](https://canvas.wisc.edu/courses/476839).
-We will also use Piazza for specific discussions about course content (e.g., sharing additional information/resources related to material discussed in lecture; answering questions about data, method, and code; etc.) and more general discussions about sports analytics (e.g., sharing job postings, open data competition opportunities, popular press articles, and other analyses you might find online etc.)
-The Piazza page is accessible via [this link](https://canvas.wisc.edu/courses/476839).
-
-:::{.callout-important}
-## Access to Canvas and Piazza
-The Canvas and Piazza sites associated with this course are limited to students enrolled in the course and the course teaching staff.
-Although they can freely access the course notes and code, auditors, UW--Madison students not currently enrolled in the course, and anyone not affiliated with UW--Madison will not have access to Canvas and Piazza sites. 
-Requests to access these sites will be ignored. 
-:::
 
 ## System Setup {#sec-R-setup}
 
-As noted [above](index.qmd#sec-course-requisites), this course will make *extensive* use of R.
+As noted in the [syllabus](syllabus.qmd#sec-course-requisites), this course will make *extensive* use of R.
 Even if you have prior experience, I **strongly** recommend installing the latest version of both R and RStudio at the beginning of the course.
 As of the time of this writing, that is R version 4.5.1 and RStudio version 2025.05.
 
@@ -113,7 +60,7 @@ Whenever you update your version of R, you need to re-install the packages; this
 ### Required Packages {#sec-required-packages}
 
 Throughout the course, we will make extensive use of several **tidyverse** packages, primarily for data loading, pre-processing, and manipulation.
-We will also make extensive use of the packages **glmnet**, **lme4**, and **ranger** for model fitting.
+We will also make extensive use of the packages **glmnet**, **lme4**, **mgcv**, and **ranger** for model fitting.
 As the course progresses, we will introduce and install new package as required.
 For the most part, these packages will be specific to a particular sport.
 Every package that we will use in this class is available through either (i) the  Comprehensive R Archive Network (CRAN) or (ii) a public GitHub repository maintained by the packager developer.
@@ -128,7 +75,7 @@ Prior to [Lecture 2](lectures/lecture02.qmd), please make sure you install the r
 ```{r}
 #| label: install-packages
 #| eval: false
-install.packages(c("devtools", "tidyverse", "glmnet", "lme4", "ranger", "colorBlindness"))
+install.packages(c("devtools", "tidyverse", "glmnet", "lme4", "mgcv", "ranger", "colorBlindness"))
 ```
 
 I am also personally partial to the palette developed by [Okabe & Ito](https://jfly.uni-koeln.de/color/), which is available using the `palette.colors()` function.
