--- a/website/lectures/lecture12.qmd
+++ b/website/lectures/lecture12.qmd
@@ -1,8 +1,10 @@
 ---
-title: "Lecture 12: Power Rankings"
+title: "Lecture 12: Power Rankings I"
 format: html
+execute: 
+  cache: true
 ---
-
+<!--
 ## Overview
 
 ## Scraping D1 Women's Hockey Results
@@ -13,10 +15,10 @@ format: html
 
 ### Fitting Bradley-Terry Models {#sec-bt-models}
 
-<!--
+
   Yes, it is a GLM, but care needs to be taken
   We often set a reference level
--->
+
 
 #### The basic model {#sec-basic-bt}
 
@@ -25,6 +27,5 @@ format: html
 
 ## Simulation {#sec-simulation}
 
-<!--
   Let's simulate the tournament!
 -->
