--- a/website/syllabus/stat479_f25_syllabus.tex
+++ b/website/syllabus/stat479_f25_syllabus.tex
@@ -26,9 +26,9 @@ University of Wisconsin--Madison
 
 \textbf{Mode of instruction:} In-person lectures.
 
-\textbf{Instructor:} Sameer Deshpande. Office hours are Monday 11:00am - 12:00pm (Morgridge Hall 5586), Wednesday 4:00pm - 5:00pm (Morgridge Hall 5586), and Friday 3:00pm - 4:15pm (Morgridge Hall 3610). 
+\textbf{Instructor:} Sameer Deshpande. Office Hours: Monday 11:00am - 12:00pm (Morgridge Hall 5586); Wednesday 4:00pm - 5:00pm (Morgridge Hall 5586); Friday 3:00pm - 4:15pm (Morgridge Hall 3610). 
 
-\textbf{TA}: Zhexuan Liu. Office hours are Tuesdays and Thursdays 9:15am - 10:45am (Morgridge Hall 5683). 
+\textbf{TA}: Zhexuan Liu. Office Hours: Tuesdays and Thursdays 9:15am - 10:45am (Morgridge Hall 2515). 
 
 \textbf{Requisites:} STAT 333 or 340. Details on assumed background are available below.
 
@@ -79,18 +79,16 @@ Week & Tuesday & Thursday  \\ \hline
 \end{tabular}
 }
 \end{table}
-
+Group project reports and presentation recordings are due on the starred ($^{\star}$) dates: October 10, November 7, and December 5.
 
 \textbf{Assignments \& grading:} Your final grade will be based on your performance on three group projects and your overall participation.
 
-
-\textbf{Group Projects}. There will be three group projects. Each project consists of two parts, a written report and a group presentation.
+\textbf{Group Projects}. There will be three group projects. Each project consists of two parts, a written report and a group presentation. The project due dates are October 10, November 7, and December 5.
 
 The written report consists of a non-technical executive summary and a technical report.
 The executive summary, which should not exceed 500 words, should describe the overall goals, analytic approach, and main conclusions in non-technical language.
 The executive summary should be free from jargon, code listings, figures, tables, and charts.
 It should be written to be read and understood by a front office executive, coach, player, or fan with little data science experience.
-
 The rest of written report should 
 \begin{itemize}
 \item{Clearly state the problem being studied and provide sufficient background details and to motivate why the problem is important and interesting.}
@@ -110,7 +108,6 @@ Each presentation should include the following elements
 \item{Main results (2--3 slides): distill your results into a few key points. Use figures, tables, charts, and other statistical software output to support your findings.}
 \item{Conclusion (1 slide): briefly summarize your analysis and findings and outline between 1 and 3 specific directions for future development, improvement or refinement.}
 \end{itemize}
-
 Project groups can earn up to 100 points on their written report and up to 100 points on their presentation.
 
 \textbf{Project Peer Reviews}. After every group project, every student is expected to peer-review the written report and presentations of 3 other teams. 
@@ -118,7 +115,8 @@ The primary purpose of this peer review is to \emph{practice} providing construc
 Peer reviews will be completed on Canvas and a structured evaluation rubric will be provided for each assignment. 
 The peer review process will be single-blinded so teams will not know the identities of their reviewers.
 Students can earn a total of 10 points for each peer review by (i) completing the provided rubric and (ii) leaving a constructive comment that identities strengths and areas for potential improvement.
-Peer reviews are due one week after the project assignment due dates; a penalty will be assessed for submitting late reviews.
+Peer reviews are due one week after the project assignment due dates; that is, they are due on October 17, November 14, and December 12.
+A penalty will be assessed for submitting late reviews.
 In total, students can earn up to 90 points for completing peer reviews. 
 
 \textbf{Group Participation}: After each project submission, each student will fill out a team accountability survey.
@@ -127,11 +125,6 @@ In total, students can earn up to 60 points based on their level of participatio
 
 \textbf{Participation:} An additional 100 points will be awarded based on participation during class, office hours, and online discussions on Piazza.
 
-
-
-
-
- 
 \begin{comment}
 This may involve replicating or extending an analysis from lecture or performing an analogous analysis on data from a sport of your own choosing.
 For each problem, you will submit a single written report that (i) includes a brief executive summary describing the overall goals, approach, and main results in non-technical language; (ii) describes the data and analytic strategy in enough technical detail that another data analyst could replicate your analysis verify its soundness; (iii) discusses and contextualizes the results using both written exposition and appropriate tabulations and visualizations; and (iv) acknowledges the limitations of the analysis and provides specific suggestions for future improvement, enhancement, and extension. 
@@ -157,6 +150,7 @@ You can earn up to 50 points each for the executive summary and technical report
 
 \textbf{Final grades}. Your final grade will be based on how many of the 1000 total points you earn during the semester.
 Over 925 points is at least an A, over 875 points is at least an AB, over 800 points is at least a B, over 700 is at least a BC, over 600 points is at least a C, and over 500 point is at least a D.
+Final grade boundaries will be announced no later than December 5, 2025.
 
 \textbf{Course website}. All lecture notes and code will be posted at
 \begin{center} \url{https://skdeshpande91.github.io/stat479\_fall2025}. \end{center}
@@ -194,7 +188,6 @@ You may also find the following websites, blogs, and podcasts useful as sources 
 \item{The Wharton Moneyball Post Game Podcast (\href{https://knowledge.wharton.upenn.edu/shows/moneyball-highlights/}{link}): a podcast version of the popular Sirius XM radio show hosted by several Wharton professors and featuring interviews with sport analytics thought leaders}
 \end{itemize}
 
-\newpage
 
 \textbf{Academic misconduct}. I take academic integrity extremely seriously. While I encourage you to collaborate with your classmates on the problem sets, you are expected to write up your own solutions. 
 You \textbf{must} acknowledge \textbf{any and all} sources that you consulted, whether it be a reference book, online resource, or another person (in the class or otherwise). 
