--- a/website/lectures/lecture02.qmd
+++ b/website/lectures/lecture02.qmd
@@ -5,26 +5,17 @@ execute:
   cache: true
   freeze: auto
 ---
-## Motivation: Beth Mead's performance at EURO2022 {#sec-motivation}
+
+## Overview
+
+### Motivation: Beth Mead at EURO 2022{#sec-motivation}
 
 During the EURO2022 football tournament, English player Beth Mead scored 6 goals.
-Here are links to videos for three of her goals:
+Below are links to videos for three of her goals. Which is most impressive to you? 
 
   * Goal against Austria [link](https://youtu.be/lVGiGZN2gdw?t=1)
   * Goal against Norway [link](https://youtu.be/lVGiGZN2gdw?t=148)
   * Goal against Sweden [link](https://youtu.be/lVGiGZN2gdw?t=148)
-
-Which is most impressive to you?
-<!--
-::: {#fig-mead-shots layout-ncol=3 fig-align="center"}
-![Mead shot against Austria [link]](figures/mead_austria.png)
-
-![Mead shot against Norway [link](https://youtu.be/lVGiGZN2gdw?t=57)](figures/mead_norway.png)
-
-![Mead shot against Sweden [link](https://youtu.be/lVGiGZN2gdw?t=148)](figures/mead_sweden.png)
-
-:::
--->
 
 There several important qualitative differences between these shots that affect our subjective comparison.
 For instance, because Mead scored against Austria in a one-on-one situation but had to shoot through multiple defenders against Norway and Sweden, we might view the former goal as easier and less impressive.
@@ -37,9 +28,14 @@ In this thought experiment, we could compare the shots based on the relative pro
 Comparing the these hypothetical long-run proportions to the actual observed shot outcomes allows us to  how impressive the outcome was.
 For instance, the lob shot against Austria might look a lot less impressive if we knew that such a shot would very often result in a goal if repeated over and over again.
 Of course, Mead can't actually repeat these shots over and over again.
-In this lecture, we will introduce the **expected goals** framework, which allows us to *estimate* those long-run frequencies of goals. 
+In this lecture, we will introduce the **expected goals** framework, which allows us to *estimate* those long-run goal frequencies. 
 
-## Working with soccer event data {#sec-statsbomb-data}
+### Organization {#sec-organization}
+In @sec-statsbomb-data, we discuss how to access soccer event data.
+We then formally define expected goals and introduce some simple models for estimating XG (@sec-init-xg and @sec-sophisticated-xg).
+Finally, we compare Mead's actual performance in EURO 2022 to her expected performance (@sec-goe).
+
+## Soccer Event Data {#sec-statsbomb-data}
 
 We will make use of high-resolution tracking data provided by the company StatsBomb, which was recently [acquired by Hudl](https://www.hudl.com/blog/hudl-statsbomb-press-release-en).
 StatsBomb extracts player locations from game film using some pretty interesting computer vision techniques.
@@ -48,7 +44,7 @@ We can access this data directly in R using the **StatsBombR** package.
 
 [^hudl]: And props to Hudl for continuing to make this data available!
 
-StatsBomb provides their public data with the package [**StatsBombR**](), which you can install using
+StatsBomb provides their public data with the package [**StatsBombR**](https://github.com/statsbomb/StatsBombR), which you can install using
 ```{r}
 #| label: install-statsbombr
 #| eval: false
@@ -102,15 +98,15 @@ wi_events <-
 
 ::: {.callout-important}
 
-## Navigating complex code
+## Developing Complex Pipelines
 
-It is not easy to code complicated pipelines like the above in a single attempt.
+It is not easy to codepipelines like the above in a single attempt.
 In fact, I had to build the code line-by-line.
 For instance, I initially ran just the first line and manually inspected the table of free competitions (using `View()`) to figure out which variables I needed to `filter()` on in the second line.
 It is very helpful to develop pipelines incrementally and to check intermediate results before putting everything together in one block of code.
 :::
 
-## An initial expected goals model {#sec-init-xg}
+## Estimating Expected Goals {#sec-init-xg}
 
 Suppose we observe a dataset consisting of $n$ shots.
 For each shot $i = 1, \ldots, n,$ let $Y_{i}$ be a binary indicator of whether the shot resulted in a goal ($Y_{i} = 1$) or not ($Y_{i} = 0$).
@@ -118,7 +114,7 @@ From the high-resolution tracking data, we can extract a potentially huge number
 Possible features include, but are certainly not limited to, the player taking the shot, the body part and side of the body used, the positions of the defenders and goal keepers, and contextual information like the score. 
 Mathematically, we can collect all these features into a (potentially large) vector $\boldsymbol{\mathbf{X}}_{i}.$
 
-Expected goals (XG) models work by (i) positing an infinite super-population of shots represented by pairs $(\boldsymbol{\mathbf{X}}, Y)$ of feature vector $\boldsymbol{\mathbf{X}}$ and binary outcome $Y$; and (ii) assuming that the shots in our dataset constitute a random sample $(\boldsymbol{\mathbf{X}}_{1}, Y_{1}), \ldots, (\boldsymbol{\mathbf{X}}_{n}, Y_{n})$ from that population.
+Expected Goals (XG) models work by (i) positing an infinite super-population of shots represented by pairs $(\boldsymbol{\mathbf{X}}, Y)$ of feature vector $\boldsymbol{\mathbf{X}}$ and binary outcome $Y$; and (ii) assuming that the shots in our dataset constitute a random sample $(\boldsymbol{\mathbf{X}}_{1}, Y_{1}), \ldots, (\boldsymbol{\mathbf{X}}_{n}, Y_{n})$ from that population.
 
 ::: {.callout-note icon=false}
 
@@ -175,7 +171,7 @@ Now suppose we only include the body part in $\boldsymbol{\mathbf{X}}$.
 If we had full access to the infinite super-population of women's international shots, then we could compute
 $$\textrm{XG}(\text{right-footed shot}) = \mathbb{P}(\text{goal} \vert \text{right-footed shot})$$
 by (i) forming a sub-group containing only those right-footed shots and then (ii) calculating the proportion of goals scored within that sub-group.
-We could similarly compute $\textrm{XG}(\text{left-footed shot})$ and $\textrm{XG}(\text{header})$ by calcuating the proportion of goals scored within the sub-groups containing, resptively, only left-footed shots and only headers.
+We could similarly compute $\textrm{XG}(\text{left-footed shot})$ and $\textrm{XG}(\text{header})$ by calculating the proportion of goals scored within the sub-groups containing, respectively, only left-footed shots and only headers.
 
 Of course, we don't have access to the infinite super-population of shots.
 However, on the assumption that our observed data constitute a sample from that super-population, we can *estimate* $\textrm{XG}$ by mimicking the idealized calculations described above:
@@ -194,7 +190,7 @@ xg_model1
 ```
 
 ::: {.callout-warning}
-## Generalizing our model results
+## Generalization
 A key assumption of all XG models is that the observed data is a random sample drawn from the super-population.
 The only women's internationals matches for which StatsBomb data were from the 2019 and 2023 World Cup and the 2022 EURO tournaments.
 These matches are arguably **not** highly representative of all women's international matches, meaning that we should exercise some caution when using models fitted to these data to analyze matches from other competitions (e.g., an international friendly or a match in a domestic league).
@@ -237,10 +233,10 @@ But, watching the videos a bit more closely, this conclusion is **not** especial
 The discrepancy between our qualitative comparisons and our quantitative modeling results stems from the fact that we only conditioned on the body part and did not account for the other ways that the shots are different.
 In other words, our initial XG model is much too coarse to quantify the differences between the three chances that we believe are important.
 
-### Accounting for additional features {#sec-addtl-features}
+## Conditioning On Additional Features {#sec-addtl-features}
 
-For a more refined comparison, we need a finer XG model that conditions on more features, including ones that differ between the two shots.
-To this end, notice that Mead uses a different *technique* on the three shots: she lobs the ball into the net on the first goal, shoots the ball from the ground on the second goal, and scores the third goal off of a half-volley, striking the ball as it bounces up off the ground. 
+For a more refined comparison, we need an XG model that conditions on more features, including ones that differ between the two shots.
+To this end, notice that Mead uses a different *technique* on the three shots: she lobs the ball into the net on the first goal; shoots the ball from the ground on the second goal; and scores the third goal off of a half-volley, striking the ball as it bounces up off the ground. 
 The StatsBomb variable `shot.technique.name` records the technique of each shot type
 ```{r}
 #| label: wi-tech
@@ -272,7 +268,7 @@ mead_shots |>
   dplyr::slice(c(1, 4, 14))
 ```
 
-## More sophisticated XG models {#sec-sophisticate-xg}
+## More Sophisticated XG Models {#sec-sophisticated-xg}
 
 According to our new XG model, the right-footed lob against Austria has a *much* higher XG than the other shots against Norway and Sweden, which seems much more reasonable than our previous model.
 But are we fully satisfied with this model?
@@ -330,6 +326,9 @@ mead_shots |>
                 shot.technique.name, Y, shot.statsbomb_xg)
 ```
 We see that most of Mead's misses were on shots with very low XG values, indicating that none of these misses were especially unlucky.
+
+## Goals Over Expected {#sec-goe}
+
 By summing the differences $Y_{i} - \textrm{XG}_{i}$ across all of her shots, we can quantify the degree to which Mead under- or over-performed the model expectations. 
 ```{r}
 #| label: mead-oe
@@ -351,6 +350,9 @@ It turns out that Alexandra Popp, the German captain, outperformed StatsBomb's X
 Like Mead, Popp scored 6 goals during the tournament off a similar number of shots (16 for Popp and 15 for Mead).
 Interestingly, Mead won the Golden Boot because she had one more assist... 
 
-## Exercises
+## Exercises{#sec-exercises}
 
-
+  1. For each team in EURO 2022, sum the $\textrm{XG}_{i}$ values and sum the residuals $Y_{i} - \textrm{XG}_{i}.$ Which teams most over- or under-performed expectations? What relationship, if any, do you observe between teams' cumulative XG and their performance relative to the StatsBomb XG model's expectations?
+  2. Hudl recently released data from EURO 2025. Repeat the analysis from @sec-goe to identify the players with the most extreme goals over expected values from the tournament.
+  3. Repeat Exercise 2.1 using data from EURO 2025
+  4. Hudl also release several full seasons worth of data from professional leagues. Pick one such season and explore the relationships between (i) the cumulative XG the team generates on offense; (ii) the cumulative XG the team gives up on defense; and (iii) the win-loss record across the season.
